@@ -1,3 +1,4 @@
+07012013 -> jonnyboy -> added variable timeout to nntp.php
 06302013 -> jonnyboy -> changed nzb retention for GrabNZBs to partretentionhours
 						added script to show sleeptime using Consoletools
 						added dateadded column to nzbs table, added code to delete incomplete nzbs older than 4 hours
